--- a/online-zoo/pages/donate/sass/layout/_wrapper.scss
+++ b/online-zoo/pages/donate/sass/layout/_wrapper.scss
@@ -24,20 +24,21 @@
         flex-direction: column;
         position: fixed;
         padding: 40px 0 0 30px;
-        width: 150px;
-        height: 310px;
+        width: 100%;
+        height: 329px;
         top: 0;
-        right: 0;
         background-color: $color-text;
-        border-radius: 15px;
         border: none;
-        right: 100%;
+        left: 100%;
         visibility: hidden;
+        opacity: 0;
+        transition: all .5s linear;
     }
     &.active {
         @include media-tablet {
-            right: 0;
+            left: 0;
             visibility: visible;
+            opacity: 1;
         }
     }
 }
