--- a/online-zoo/pages/main/sass/base/_hamburger.scss
+++ b/online-zoo/pages/main/sass/base/_hamburger.scss
@@ -17,7 +17,6 @@
     z-index: 10;
     @include media-tablet {
         display: inline-block;
-        transition: transform .4s ease;
     }
     &:before {
         @extend %hamburger-line;
@@ -51,4 +50,23 @@
 
 .hamburger__line.active {
     transform: scale(0);
+}
+
+.hamburger__overlay {
+    display: none;
+    position:fixed;
+    top: 0;
+    right: -100%;
+    width: 100vw;
+    height: 100vh;
+    z-index: 9;
+    background-color: rgba(0, 0, 0, 0.25);
+}
+
+.hamburger_overlay.active {
+    display: block;
+    margin: 0 auto;
+    width: 100%;
+    min-height: 100%;
+    right: 0;
 }
