--- a/online-zoo/pages/main/sass/base/_icons.scss
+++ b/online-zoo/pages/main/sass/base/_icons.scss
@@ -5,7 +5,7 @@
     @extend %transition;
     @include media-tablet {
         height: 17px;
-        left: 14%;
+        left: 15%;
         bottom: 20%;
     } 
 }
