--- a/online-zoo/pages/main/sass/components/_testimonials.scss
+++ b/online-zoo/pages/main/sass/components/_testimonials.scss
@@ -90,7 +90,7 @@
     }
     @include media-mobile {
         height: 109px;
-        padding: 8px 17px 0 12px;
+        padding: 8px 27px 0 12px;
     }
 }
 
@@ -120,7 +120,6 @@
             margin: 0 1px 0 1px;
         }
     }
-    
 }
 
 .feedback__text {
