--- a/online-zoo/pages/main/sass/layout/_columns.scss
+++ b/online-zoo/pages/main/sass/layout/_columns.scss
@@ -54,6 +54,7 @@
         flex-direction: column;
         align-items: center;
         margin-bottom: 40px;
+        gap: 15px;
     }
     @media (max-width: 412px) {
         margin-bottom: 28px;
