--- a/online-zoo/pages/main/sass/layout/_header.scss
+++ b/online-zoo/pages/main/sass/layout/_header.scss
@@ -2,7 +2,7 @@
     position: relative;
     padding: 14px 0;
     background: $color-black;
-    width: 100vw;
+    width: 100%;
     z-index: 10;
     @include media-tablet {
         position: fixed;
@@ -30,6 +30,7 @@
         gap: 1.5rem;
         margin-top: 30px;
         margin-bottom: 15px;
+
     }
 }
 
