--- a/online-zoo/pages/main/sass/layout/_wrapper.scss
+++ b/online-zoo/pages/main/sass/layout/_wrapper.scss
@@ -23,23 +23,24 @@
         flex-direction: column;
         position: fixed;
         padding: 30px 0 0 25px;
-        width: 150px;
-        height: 310px;
+        width: 100%;
+        height: 329px;
         top: 0;
-        right: 0;
         background-color: rgb(255, 255, 255);
-        border-radius: 15px;
         border: none;
-        right: 100%;
+        left: 100%;
         visibility: hidden;
+        opacity: 0;
+        transition: all .5s linear;
     }
     &.active {
         @include media-tablet {
-            right: 0;
+            left: 0;
             visibility: visible;
+            opacity: 1;
+            z-index: 10;
         }
     }
-
 }
 
 .wrapper__watch-online {
@@ -86,7 +87,6 @@
         padding: 20px 0 40px;
         align-items: center;
     }
-
 }
 
 .wrapper__testimonials {
